--- a/Tasks/Module_3.ipynb
+++ b/Tasks/Module_3.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/opiumfentanyl/university/blob/main/tasks/1.%20%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D1%8F/%D0%9C%D0%BE%D0%B4%D1%83%D0%BB%D1%8C%20%E2%84%963.%20%D0%A1%D1%82%D1%80%D0%BE%D0%BA%D0%B8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/opiumfentanyl/university/blob/main/Tasks/Module_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "V-9pALsYHsyX",
         "outputId": "d9e37ffb-0afd-49f8-aeaa-cec13b746984",
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "RR8cG4-jHs1I",
         "outputId": "7d0587bc-49e7-4bf3-e72a-3e2cfc634b88",
@@ -111,13 +111,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "l2X5UFTXHs31"
+        "id": "l2X5UFTXHs31",
+        "outputId": "45f4b0c6-dad9-49cc-e03c-00c573fbf741",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fffaaaaf\n",
+            "0 7\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ваш код"
+        "# Ваш код\n",
+        "a=str(input())\n",
+        "b=-1\n",
+        "c=-1\n",
+        "for i in range (len(a)):\n",
+        "    if a[i]=='f':\n",
+        "        if b == -1:\n",
+        "            b = i\n",
+        "        c = i\n",
+        "if b==c:\n",
+        "    print(b)\n",
+        "elif c>b:\n",
+        "    print(b,c)\n",
+        "else:\n",
+        "    print ('-1')"
       ]
     },
     {
@@ -131,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "Mh3o7_O7Hs6x",
         "outputId": "796ff6d7-bd9e-4b8b-bf69-06ae26050255",
@@ -168,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "YdeSirSGHs9h",
         "outputId": "471f8370-7ce7-4d1b-d7eb-3b9f6f90a644",
