Создано с помощью Colaboratory

--- a/Tasks/Module_7.ipynb
+++ b/Tasks/Module_7.ipynb
@@ -36,11 +36,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "0EZLIlh-Opa1"
+        "id": "0EZLIlh-Opa1",
+        "outputId": "fc925a40-65a3-4e93-df76-ad434eb4beee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Введите строку:\n",
+            "one two one two three two four three\n",
+            "0 0 1 1 0 2 0 1\n"
+          ]
+        }
+      ],
       "source": [
         "# Ваш код\n",
         "text = input(\"Введите строку:\\n\")\n",
@@ -49,8 +63,9 @@
         "result=list()\n",
         "for i in range(len(b)):\n",
         "  if b[i] in a:\n",
-        "    print(a[b[i]])\n",
-        "    a[b[i]]+=1"
+        "    result.append(a[b[i]])\n",
+        "    a[b[i]]+=1\n",
+        "print(*result)"
       ]
     },
     {
@@ -64,11 +79,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "YozqjtH-OpkK"
+        "id": "YozqjtH-OpkK",
+        "outputId": "54ceb1c6-5380-442c-d333-2f005d75bce3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "Helli Hi\n",
+            "Bye Goodbye\n",
+            "List Array\n",
+            "Goodbye\n",
+            "Bye\n"
+          ]
+        }
+      ],
       "source": [
         "# Ваш код\n",
         "k=int(input())\n",
@@ -93,11 +125,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "z9E4gf4oOpp5"
+        "id": "z9E4gf4oOpp5",
+        "outputId": "6d944d4b-4d10-44a2-fd14-e26e6981fe2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "Smith 10\n",
+            "Smith 5\n",
+            "Dow 9\n",
+            "Dow 8\n",
+            "Smith 1\n",
+            "('Dow', 17)\n",
+            "('Smith', 16)\n"
+          ]
+        }
+      ],
       "source": [
         "# Ваш код\n",
         "k=int(input())\n",
@@ -109,7 +160,8 @@
         "  else:\n",
         "    text[members[0]] = int(members[1])\n",
         "clr=sorted(text.items())\n",
-        "print(clr)"
+        "for i in clr:\n",
+        "  print (i)"
       ]
     },
     {
@@ -123,11 +175,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "76hJaISeOptk"
+        "id": "76hJaISeOptk",
+        "outputId": "db024af9-4432-4779-cf94-1758edd552ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "apple orange banana\n",
+            "banana orange\n",
+            "banana\n"
+          ]
+        }
+      ],
       "source": [
         "# Ваш код\n",
         "k=int(input())\n",
@@ -159,11 +226,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "xV1edOx2OpwJ"
+        "id": "xV1edOx2OpwJ",
+        "outputId": "d59bceae-b59b-4808-faa0-ccee76f3adfe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "notepad.exe R X\n",
+            "access.log W R\n",
+            "logo.gif R\n",
+            "httpd.conf X W R\n",
+            "5\n",
+            "read logo.gif\n",
+            "write notepad.exe\n",
+            "execute logo.gif\n",
+            "read access.log\n",
+            "write access.log\n",
+            "OK\n",
+            "Denied\n",
+            "Denied\n",
+            "OK\n",
+            "OK\n"
+          ]
+        }
+      ],
       "source": [
         "# Ваш код\n",
         "k = int(input())\n",
@@ -180,7 +274,8 @@
         "        chk.append(\"OK\")\n",
         "    else:\n",
         "        chk.append(\"Denied\")\n",
-        "print(chk)"
+        "for i in chk:\n",
+        "  print(i)\n"
       ]
     },
     {
@@ -203,11 +298,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "MSPxuo5NOpyh"
+        "id": "MSPxuo5NOpyh",
+        "outputId": "77200ad5-0eed-4eff-b02c-fa7aa596cf39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "USA Boston Pittsburgh Washington Seattle\n",
+            "UK London Edinburgh Cardiff Belfast\n",
+            "3\n",
+            "Cardiff\n",
+            "Seattle\n",
+            "London\n",
+            "UK\n",
+            "USA\n",
+            "UK\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "k=int(input())\n",
@@ -238,11 +354,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "TStU6BsNOp1G"
+        "id": "TStU6BsNOp1G",
+        "outputId": "84b18563-d5f9-4bae-9607-005921cb644c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n",
+            "hi\n",
+            "hi\n",
+            "what is your name\n",
+            "my name is bond\n",
+            "james bond\n",
+            "my name is damme\n",
+            "van damme\n",
+            "claude van damme\n",
+            "jean clause van damme\n",
+            "damme 4\n",
+            "is 3\n",
+            "name 3\n",
+            "van 3\n",
+            "bond 2\n",
+            "hi 2\n",
+            "my 2\n",
+            "claude 1\n",
+            "clause 1\n",
+            "james 1\n",
+            "jean 1\n",
+            "what 1\n",
+            "your 1\n"
+          ]
+        }
+      ],
       "source": [
         "# Ваш код\n",
         "n = int(input())\n",
