Создано с помощью Colaboratory

--- a/Practical_Task_11/Practical_Task_11.ipynb
+++ b/Practical_Task_11/Practical_Task_11.ipynb
@@ -83,7 +83,7 @@
         },
         "outputId": "ebed591f-4406-4500-83b0-cccb606862c5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +152,7 @@
         },
         "outputId": "7d7fdf42-e6c2-4b81-9da7-9c32dacfb195"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,7 +203,7 @@
       "metadata": {
         "id": "d-vd-AYRdBId"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
       "metadata": {
         "id": "LtIAKDWFdEcr"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -273,7 +273,7 @@
         },
         "outputId": "f225066e-bbba-4b5f-bf5f-61884e3dd321"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,9 +411,21 @@
         "        student.grades[course] = [grade]\n",
         "\n",
         "class Lecturer(Mentor):\n",
+        "    def __init__(self, name, surname):\n",
+        "        super().__init__(name, surname)\n",
+        "        self.lecturer_courses = []\n",
+        "\n",
+        "    def add_lecturer_course(self, course_name):\n",
+        "        self.lecturer_courses.append(course_name)\n",
+        "\n",
         "\n",
         "class Reviewer(Mentor):\n",
-        "\n"
+        "    def __init__(self, name, surname):\n",
+        "        super().__init__(name, surname)\n",
+        "        self.reviewer_courses = []\n",
+        "\n",
+        "    def add_reviewer_course(self, course_name):\n",
+        "        self.reviewer_courses.append(course_name)\n"
       ],
       "metadata": {
         "id": "1quZPRZKtIoc"
@@ -444,7 +456,54 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ваш код"
+        "# Ваш код\n",
+        "class Student:\n",
+        "  def __init__(self, name, surname, gender):\n",
+        "    self.name = name\n",
+        "    self.surname = surname\n",
+        "    self.gender = gender\n",
+        "    self.finished_courses = []\n",
+        "    self.courses_in_progress = []\n",
+        "    self.grades = {}\n",
+        "\n",
+        "  def add_courses(self, course_name):\n",
+        "    self.finished_courses.append(course_name)\n",
+        "\n",
+        "  def all_courses(self):\n",
+        "    return self.courses_in_progress + self.finished_courses\n",
+        "\n",
+        "  def rate_lector(self, lector, course, rate):\n",
+        "    if course not in self.all_courses():\n",
+        "      return\n",
+        "    if course not in lector.courses_attached:\n",
+        "      return\n",
+        "    else:\n",
+        "      lector.add_rate(course, rate)\n",
+        "\n",
+        "\n",
+        "class Mentor:\n",
+        "  def __init__(self, name, surname):\n",
+        "    self.name = name\n",
+        "    self.surname = surname\n",
+        "    self.courses_attached = []\n",
+        "\n",
+        "\n",
+        "class Lecturer(Mentor):\n",
+        "  def __init__(self, name: str, surname: str):\n",
+        "    super().__init__(name, surname)\n",
+        "    self.rating = {}\n",
+        "\n",
+        "  def add_rate(self, name_course, rate):\n",
+        "    if name_course not in self.courses_attached:\n",
+        "      return\n",
+        "    if name_course in self.rating:\n",
+        "      self.rating[name_course].append(rate)\n",
+        "    else:\n",
+        "      self.rating[name_course] = [rate]\n",
+        "\n",
+        "class Reviewer(Mentor):\n",
+        "  def rate_hw(self, student, course, grade):\n",
+        "    student.grades[course] = [grade]"
       ],
       "metadata": {
         "id": "U30yyvuirv6H"
@@ -509,7 +568,90 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ваш код"
+        "# Ваш код\n",
+        "class Student:\n",
+        "  def __init__(self, name, surname, gender):\n",
+        "    self.name = name\n",
+        "    self.surname = surname\n",
+        "    self.gender = gender\n",
+        "    self.finished_courses = []\n",
+        "    self.courses_in_progress = []\n",
+        "    self.grades = {}\n",
+        "\n",
+        "  def add_courses(self, course_name):\n",
+        "    self.finished_courses.append(course_name)\n",
+        "\n",
+        "  def all_courses(self):\n",
+        "    return self.courses_in_progress\n",
+        "\n",
+        "  def rate_lector(self, lector, course, rate):\n",
+        "    if course not in self.all_courses():\n",
+        "      return\n",
+        "    if course not in lector.courses_attached:\n",
+        "      return\n",
+        "    else:\n",
+        "      lector.add_rate(course, rate)\n",
+        "\n",
+        "  def avg_hw_rate(self):\n",
+        "    all_rate = [k for i in self.grades for k in self.grades[i]]\n",
+        "    if len(all_rate) == 0:\n",
+        "      return 0\n",
+        "    else:\n",
+        "      return sum(all_rate) / len(all_rate)\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    txt = f\"Имя: {self.name}\\n\"\n",
+        "    f\"Фамилия: {self.surname}\\n\"\n",
+        "    f\"Средняя оценка за домашние задания: {self.avg_hw_rate()}\\n\"\n",
+        "    f\"Курсы в процессе изучения: {self.courses_in_progress}\"\n",
+        "    f\"Завершенные курсы: {self.finished_courses}\"\n",
+        "\n",
+        "    return txt\n",
+        "\n",
+        "\n",
+        "class Mentor:\n",
+        "  def __init__(self, name, surname):\n",
+        "    self.name = name\n",
+        "    self.surname = surname\n",
+        "    self.courses_attached = []\n",
+        "\n",
+        "\n",
+        "class Lecturer(Mentor):\n",
+        "  def __init__(self, name: str, surname: str):\n",
+        "    super().__init__(name, surname)\n",
+        "    self.rating = {}\n",
+        "\n",
+        "  def add_rate(self, name_course, rate):\n",
+        "    if name_course not in self.courses_attached:\n",
+        "      return\n",
+        "    if name_course in self.rating:\n",
+        "      self.rating[name_course].append(rate)\n",
+        "    else:\n",
+        "      self.rating[name_course] = [rate]\n",
+        "\n",
+        "  def avg_rating(self):\n",
+        "    all_rating = [k for i in self.rating for k in self.rating[i]]\n",
+        "    if len(all_rating) == 0:\n",
+        "      return 0\n",
+        "    else:\n",
+        "      return sum(all_rating) / len(all_rating)\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    txt = f\"Имя: {self.name}\\n\"\n",
+        "    f\"Фамилия: {self.surname}\\n\"\n",
+        "    f\"Средняя оценка за лекции: {self.avg_rating()}\"\n",
+        "\n",
+        "    return txt\n",
+        "\n",
+        "class Reviewer(Mentor):\n",
+        "  def rate_hw(self, student, course, grade):\n",
+        "    student.grades[course] = [grade]\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    txt = f\"Имя: {self.name}\\n\"\n",
+        "    f\"Фамилия: {self.surname}\\n\"\n",
+        "\n",
+        "    return txt"
       ],
       "metadata": {
         "id": "gCJAL_EmwU0b"
@@ -529,7 +671,98 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ваш код"
+        "# Ваш код\n",
+        "class Student:\n",
+        "  def __init__(self, name, surname, gender):\n",
+        "    self.name = name\n",
+        "    self.surname = surname\n",
+        "    self.gender = gender\n",
+        "    self.finished_courses = []\n",
+        "    self.courses_in_progress = []\n",
+        "    self.grades = {}\n",
+        "\n",
+        "  def add_courses(self, course_name):\n",
+        "    self.finished_courses.append(course_name)\n",
+        "\n",
+        "  def all_courses(self):\n",
+        "    return self.courses_in_progress + self.finished_courses\n",
+        "\n",
+        "  def rate_lector(self, lector, course, rate):\n",
+        "    if course not in self.all_courses():\n",
+        "      return\n",
+        "    if course not in lector.courses_attached:\n",
+        "      return\n",
+        "    else:\n",
+        "      lector.add_rate(course, rate)\n",
+        "\n",
+        "  def avg_hw_rate(self):\n",
+        "    all_rate = [k for i in self.grades for k in self.grades[i]]\n",
+        "    if len(all_rate) == 0:\n",
+        "      return 0\n",
+        "    else:\n",
+        "      return sum(all_rate) / len(all_rate)\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    txt = f\"Имя: {self.name}\\n\"\n",
+        "    f\"Фамилия: {self.surname}\\n\"\n",
+        "    f\"Средняя оценка за домашние задания: {self.avg_hw_rate()}\\n\"\n",
+        "    f\"Курсы в процессе изучения: {self.courses_in_progress}\"\n",
+        "    f\"Завершенные курсы: {self.finished_courses}\"\n",
+        "\n",
+        "    return txt\n",
+        "  def __int__(self):\n",
+        "    return self.avg_hw_rate()\n",
+        "\n",
+        "\n",
+        "class Mentor:\n",
+        "  def __init__(self, name, surname):\n",
+        "    self.name = name\n",
+        "    self.surname = surname\n",
+        "    self.courses_attached = []\n",
+        "\n",
+        "  def __getitem__(self):\n",
+        "    return self.courses_attached\n",
+        "\n",
+        "\n",
+        "class Lecturer(Mentor):\n",
+        "  def __init__(self, name: str, surname: str):\n",
+        "    super().__init__(name, surname)\n",
+        "    self.rating = {}\n",
+        "\n",
+        "  def add_rate(self, name_course, rate):\n",
+        "    if name_course not in self.courses_attached:\n",
+        "      return\n",
+        "    if name_course in self.rating:\n",
+        "      self.rating[name_course].append(rate)\n",
+        "    else:\n",
+        "      self.rating[name_course] = [rate]\n",
+        "\n",
+        "  def avg_rating(self):\n",
+        "    all_rating = [k for i in self.rating for k in self.rating[i]]\n",
+        "    if len(all_rating) == 0:\n",
+        "      return 0\n",
+        "    else:\n",
+        "      return sum(all_rating) / len(all_rating)\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    txt = f\"Имя: {self.name}\\n\"\n",
+        "    f\"Фамилия: {self.surname}\\n\"\n",
+        "    f\"Средняя оценка за лекции: {self.avg_rating()}\"\n",
+        "\n",
+        "    return txt\n",
+        "\n",
+        "  def __int__(self):\n",
+        "    return self.avg_rating()\n",
+        "\n",
+        "class Reviewer(Mentor):\n",
+        "  def rate_hw(self, student, course, grade):\n",
+        "    student.grades[course] = [grade]\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    txt = f\"Имя: {self.name}\\n\"\n",
+        "    f\"Фамилия: {self.surname}\\n\"\n",
+        "\n",
+        "    return txt"
       ],
       "metadata": {
         "id": "WNCf9PPMu4Gv"
@@ -554,13 +787,213 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ваш код"
+        "# Ваш код\n",
+        "class Student:\n",
+        "  def __init__(self, name, surname, gender):\n",
+        "    self.name = name\n",
+        "    self.surname = surname\n",
+        "    self.gender = gender\n",
+        "    self.finished_courses = []\n",
+        "    self.courses_in_progress = []\n",
+        "    self.grades = {}\n",
+        "\n",
+        "  def add_courses(self, course_name):\n",
+        "    self.finished_courses.append(course_name)\n",
+        "\n",
+        "  def all_courses(self):\n",
+        "    return self.courses_in_progress + self.finished_courses\n",
+        "\n",
+        "  def rate_lector(self, lector, course, rate):\n",
+        "    if course not in self.all_courses():\n",
+        "      return\n",
+        "    if course not in lector.courses_attached:\n",
+        "      return\n",
+        "    else:\n",
+        "      lector.add_rate(course, rate)\n",
+        "\n",
+        "  def avg_hw_rate(self):\n",
+        "    all_rate = [k for i in self.grades for k in self.grades[i]]\n",
+        "    if len(all_rate) == 0:\n",
+        "      return 0\n",
+        "    else:\n",
+        "      return sum(all_rate) / len(all_rate)\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return (f\"Имя: {self.name}\\nФамилия: {self.surname}\\n\"\n",
+        "            f\"Средняя оценка за домашние задания: {self.avg_hw_rate()}\\n\"\n",
+        "            f\"Курсы в процессе изучения: {self.courses_in_progress}\\n\"\n",
+        "            f\"Завершенные курсы: {self.finished_courses}\")\n",
+        "  def __int__(self):\n",
+        "    return self.avg_hw_rate()\n",
+        "\n",
+        "\n",
+        "class Mentor:\n",
+        "  def __init__(self, name, surname):\n",
+        "    self.name = name\n",
+        "    self.surname = surname\n",
+        "    self.courses_attached = []\n",
+        "\n",
+        "  def add_courses(self, course_name):\n",
+        "    self.courses_attached.append(course_name)\n",
+        "\n",
+        "  def __getitem__(self):\n",
+        "    return self.courses_attached\n",
+        "\n",
+        "\n",
+        "class Lecturer(Mentor):\n",
+        "  def __init__(self, name: str, surname: str):\n",
+        "    super().__init__(name, surname)\n",
+        "    self.rating = {}\n",
+        "\n",
+        "  def add_rate(self, name_course, rate):\n",
+        "    if name_course not in self.courses_attached:\n",
+        "      return\n",
+        "    if name_course in self.rating:\n",
+        "      self.rating[name_course].append(rate)\n",
+        "    else:\n",
+        "      self.rating[name_course] = [rate]\n",
+        "\n",
+        "  def avg_rating(self):\n",
+        "    all_rating = [k for i in self.rating for k in self.rating[i]]\n",
+        "    if len(all_rating) == 0:\n",
+        "      return 0\n",
+        "    else:\n",
+        "      return sum(all_rating) / len(all_rating)\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return (f\"Имя: {self.name}\\nФамилия: {self.surname}\\n\"\n",
+        "            f\"Средняя оценка за лекции: {self.avg_rating()}\")\n",
+        "\n",
+        "  def __int__(self):\n",
+        "    return self.avg_rating()\n",
+        "\n",
+        "class Reviewer(Mentor):\n",
+        "  def rate_hw(self, student, course, grade):\n",
+        "    if course not in student.all_courses() or course not in self.courses_attached:\n",
+        "      return\n",
+        "    else:\n",
+        "      student.grades[course] = [grade]\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    txt = f\"Имя: {self.name}\\nФамилия: {self.surname}\\n\"\n",
+        "\n",
+        "    return txt\n",
+        "\n",
+        "def calc_avg_students_rate_group(students, course):\n",
+        "  rate_students = []\n",
+        "\n",
+        "  for i in students:\n",
+        "    if course in i.grades.keys():\n",
+        "      rate_students += i.grades[course]\n",
+        "\n",
+        "  if len(rate_students) == 0:\n",
+        "    return 0\n",
+        "\n",
+        "  return sum(rate_students) / len(rate_students)\n",
+        "\n",
+        "def calc_avg_lectors_rate_group(lectors, course):\n",
+        "  rate_lectors = []\n",
+        "\n",
+        "  for i in lectors:\n",
+        "    if course in i.rating.keys():\n",
+        "      rate_lectors += i.rating[course]\n",
+        "\n",
+        "  if len(rate_lectors) == 0:\n",
+        "    return 0\n",
+        "\n",
+        "  return sum(rate_lectors) / len(rate_lectors)\n",
+        "\n",
+        "lector_1 = Lecturer('Виктор', 'Баринов')\n",
+        "lector_1.add_courses(\"Java\")\n",
+        "lector_1.add_courses(\"Python\")\n",
+        "lector_1.add_courses(\"C++\")\n",
+        "lector_2 = Lecturer('Галина', 'Отмена')\n",
+        "lector_2.add_courses(\"C#\")\n",
+        "lector_2.add_courses(\"Python\")\n",
+        "\n",
+        "student_1 = Student('Максим', 'Лавров', 'Мужской')\n",
+        "student_1.add_courses(\"Java\")\n",
+        "student_1.add_courses(\"C++\")\n",
+        "student_1.add_courses(\"Python\")\n",
+        "student_2 = Student('Татьяна', 'Королева', 'Женский')\n",
+        "student_2.add_courses(\"C#\")\n",
+        "student_2.add_courses(\"Python\")\n",
+        "\n",
+        "reviewer_1 = Reviewer(\"Дмитрий\", \"Нагиев\")\n",
+        "reviewer_1.add_courses(\"Java\")\n",
+        "reviewer_1.add_courses(\"C++\")\n",
+        "reviewer_1.add_courses(\"Python\")\n",
+        "reviewer_2 = Reviewer(\"Александр\", \"Емельяненко\")\n",
+        "reviewer_2.add_courses(\"C#\")\n",
+        "reviewer_2.add_courses(\"Python\")\n",
+        "\n",
+        "student_1.rate_lector(lector_1, \"C++\", 10)\n",
+        "student_1.rate_lector(lector_1, \"Python\", 8)\n",
+        "student_1.rate_lector(lector_1, \"Java\", 5)\n",
+        "student_2.rate_lector(lector_2, \"C#\", 9)\n",
+        "student_2.rate_lector(lector_2, \"Python\", 7)\n",
+        "\n",
+        "reviewer_1.rate_hw(student_1, \"C++\", 8)\n",
+        "reviewer_1.rate_hw(student_1, \"Python\", 10)\n",
+        "reviewer_1.rate_hw(student_1, \"Java\", 6)\n",
+        "reviewer_2.rate_hw(student_2, \"C#\", 9)\n",
+        "reviewer_2.rate_hw(student_2, \"Python\", 7)\n",
+        "\n",
+        "print(f\"Студенты: \\n{student_1}\\n\\n{student_2}\\n\\n\\nЛекторы: \\n{lector_1}\\n\\n{lector_2}\\n\\n\\nЭксперты: \\n{reviewer_1}\\n{reviewer_2}\\n\")\n",
+        "print(f\"Средняя оценка студентов в группе Python: {calc_avg_students_rate_group([student_1, student_2], 'Python')}\\n\")\n",
+        "print(f\"Средняя оценка лекций в группе Python: {calc_avg_lectors_rate_group([lector_1, lector_2], 'Python')}\")"
       ],
       "metadata": {
-        "id": "uh8n08fdu4V_"
+        "id": "uh8n08fdu4V_",
+        "outputId": "e495230d-0c7b-4fc4-ee50-fe3b4bb95824",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Студенты: \n",
+            "Имя: Максим\n",
+            "Фамилия: Лавров\n",
+            "Средняя оценка за домашние задания: 8.0\n",
+            "Курсы в процессе изучения: []\n",
+            "Завершенные курсы: ['Java', 'C++', 'Python']\n",
+            "\n",
+            "Имя: Татьяна\n",
+            "Фамилия: Королева\n",
+            "Средняя оценка за домашние задания: 8.0\n",
+            "Курсы в процессе изучения: []\n",
+            "Завершенные курсы: ['C#', 'Python']\n",
+            "\n",
+            "\n",
+            "Лекторы: \n",
+            "Имя: Виктор\n",
+            "Фамилия: Баринов\n",
+            "Средняя оценка за лекции: 7.666666666666667\n",
+            "\n",
+            "Имя: Галина\n",
+            "Фамилия: Отмена\n",
+            "Средняя оценка за лекции: 8.0\n",
+            "\n",
+            "\n",
+            "Эксперты: \n",
+            "Имя: Дмитрий\n",
+            "Фамилия: Нагиев\n",
+            "\n",
+            "Имя: Александр\n",
+            "Фамилия: Емельяненко\n",
+            "\n",
+            "\n",
+            "Средняя оценка студентов в группе Python: 8.5\n",
+            "\n",
+            "Средняя оценка лекций в группе Python: 7.5\n"
+          ]
+        }
+      ]
     }
   ]
 }
